objects/SubProject__c.object
<CustomObject>
    <fields>
        <fullName>SubProject_Region__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-ADMIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBURY ADMIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-ADMINISTRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA-EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA-WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - ADMINISTRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-ADMIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-CENTRAL-FLORENCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-WEST-LAPALMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-WEST-PORTLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL-ADMIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL-CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL-SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL-WEST</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubProject_Status__c</fullName>
        <label>SubProject Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold No Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Facility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TC_10__c</fullName>
        <formula>IF( ISBLANK( Training_LMS_Logins_Delivered__c ) , null ,  Training_LMS_Logins_Delivered__c  -  Training_Request_Submitted__c )</formula>
        <label>TC (&lt;=10)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Implementation_Client_Mgr_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training &amp; Implementation Client Mgr 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubProjects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Implementation_Client_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training &amp; Implementation Client Mgr</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_LMS_Logins_Delivered__c</fullName>
        <label>Training (LMS) Logins Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Request_90__c</fullName>
        <formula>IF( ISBLANK( Training_Request_Submitted__c ) , null ,  Estimated_Install_Date_EID__c  -  Training_Request_Submitted__c )</formula>
        <label>Training Request (&gt;=90)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Request_Submitted__c</fullName>
        <label>Training Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Meeting_Conducted__c</fullName>
        <label>Transition Meeting Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WFM_10__c</fullName>
        <formula>IF( ISBLANK( Resource_Request_RMS_Approved__c ) , null ,  Resource_Request_RMS_Approved__c  -  Resource_Request_RMS_Submitted__c )</formula>
        <label>WFM (&lt;=10)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workflow_Manager_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Manager 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubProjectWMangers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workflow_Manager_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Manager 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubProjectWMangers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SubProject</label>
    <listViews>
        <fullName>All_At_Risk_Assigned_to_My_Associates</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Does_Report_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>At Risk</value>
        </filters>
        <label>All At Risk - Assigned To My Associates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_At_Risk_Project_Managed_by_Me</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Project_Managed_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>At Risk</value>
        </filters>
        <label>All At Risk - Project Managed By Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Caution_Assigned_to_My_Associates</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Does_Report_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>Caution</value>
        </filters>
        <label>All Caution - Assigned To My Associates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Caution_Project_Managed_by_Me</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Project_Managed_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>Caution</value>
        </filters>
        <label>All Caution - Project Managed By Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Closed_Assigned_to_My_Associates</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Does_Report_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed - Assigned To My Associates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Closed_Project_Managed_by_Me</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Project_Managed_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed - Project Managed By Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Assigned_to_My_Associates</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Does_Report_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open - Assigned To My Associates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Project_Managed_by_Me</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Project_Managed_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open - Project Managed By Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Alliance</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>startsWith</operation>
            <value>ALLIANCE</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Alliance</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canada</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>startsWith</operation>
            <value>CANADA</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Canada</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Enterprise</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>startsWith</operation>
            <value>ENTERPRISE,DIVISION,AUTONATION,ASBURY,SONIC</value>
        </filters>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>contains</operation>
            <value>group</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Enterprise</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Major_Central</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>startsWith</operation>
            <value>MAJOR CENTRAL</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Major Central</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Major_Northeast</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>startsWith</operation>
            <value>MAJOR-NORTHEAST</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Major Northeast</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Major_Southeast</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>startsWith</operation>
            <value>MAJOR-SOUTHEAST</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Major Southeast</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Major_West_LaPalma</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>startsWith</operation>
            <value>MAJOR-WEST</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Major West</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SP-{00000000}</displayFormat>
        <label>SubProject ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SubProjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Buy_Sell_Clone_Type_Required</fullName>
        <active>true</active>
        <description>Buy-Sell Clone Type field is required when &quot;Buy / Sell&quot; is selected for Project Type and &quot;Ownership Change&quot; for Secondary Project Type.</description>
        <errorConditionFormula>ISBLANK(TEXT(Buy_Sell_Clone_Type__c)) &amp;&amp; ISPICKVAL(Project_Type__c, &quot;Buy / Sell&quot;) &amp;&amp; ISPICKVAL(Secondary_Project_Type__c, &quot;Ownership Change&quot;) &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))&amp;&amp;
NOT(ISPICKVAL( Market__c, &quot;PFW - Heavy Equipment&quot;))</errorConditionFormula>
        <errorDisplayField>Buy_Sell_Clone_Type__c</errorDisplayField>
        <errorMessage>Please select a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID_cannot_be_in_the_Past</fullName>
        <active>false</active>
        <description>Estimated Install Date can&apos;t be a date before today(i.e.in the past).
11/19/14-It appears the validation for the EID not being in the past is working in a way we didn’t anticipate. Can we turn that off until we have a chance to sort this out? S. Hommer</description>
        <errorConditionFormula>Estimated_Install_Date_EID__c &lt; TODAY() &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))</errorConditionFormula>
        <errorDisplayField>Estimated_Install_Date_EID__c</errorDisplayField>
        <errorMessage>Cannot be a date before today (i.e. in the past).</errorMessage>
    </validationRules>
</CustomObject>